@@ -1,3 +1,13 @@
+2018-11-23  Jiewen Tan  <jiewen_tan@apple.com>
+
+        [WebAuthN] Enable Web Authentication as an experimental feature for macOS
+        https://bugs.webkit.org/show_bug.cgi?id=191932
+        rdar://problem/46225210
+
+        Reviewed by Brent Fulgham.
+
+        * Shared/WebPreferences.yaml:
+
 2018-11-23  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Enable drag and drop support for iOSMac
